attempt overflow fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,7 +122,6 @@ form > input {
 .postUser {
 	padding: 5px;
 	overflow:hidden;
-	text-align: center;
 	float:left;
 	display: inline-block;
 	background-color: #eee;
